test_programs/compile_failure/noirc_frontend_tests_normal_generic_as_array_length/src/main.nr

    pub struct Foo<N> {
        a: Field,
        b: [Field; N],
    }
    